project(poly2tri)
cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_INSTALL_INCDIR "${CMAKE_INSTALL_PREFIX}/include")
SET(CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")

file(GLOB COMMON_SOURCES poly2tri/common/*.cc)
file(GLOB SWEEP_SOURCES poly2tri/sweep/*.cc)
file(GLOB_RECURSE SOURCE_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)

set(SOURCE_CC ${COMMON_SOURCES} ${SWEEP_SOURCES})

add_library(poly2tri SHARED ${SOURCE_CC})

target_link_libraries(poly2tri
    m)

target_include_directories(poly2tri PUBLIC
    ${PROJECT_SOURCE_DIR}/poly2tri/common
    ${PROJECT_SOURCE_DIR}/poly2tri/sweep
)

INSTALL (DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/poly2tri" DESTINATION ${CMAKE_INSTALL_INCDIR} FILES_MATCHING PATTERN "*.h")
INSTALL (TARGETS poly2tri LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
